Fix center alignment of sign-up button in section-4

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ button.sign-up {
     display: flex;
     flex: 1;
     justify-content: space-between;
-    align-content: center;
+    align-items: center;
     flex-wrap: wrap;
     background-color: rgb(99, 99, 248);
     color: white;
